During Sigma 8.0 I modified README>md & index.html and created a new file with filename  untracked.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    
+    <h1 style="color: white;"> Sigma 8.0 git&github </h1> 
+
     <div class="main">
         <nav>
             <span>
